# emri-capstone

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/skills/clickup-automation/: SKILL.md
.claude/skills/data-analysis/: SKILL.md
.claude/skills/diagram-creator/: SKILL.md
.github/workflows/: ci.yml
data/output/: wdi_panel.csv  wdi_panel.parquet
data/raw/: IT.NET.USER.ZS.json  NY.GDP.PCAP.CD.json  NY.GNP.PCAP.CD.json  SL.TLF.CACT.FE.ZS.json  SP.URB.TOTL.IN.ZS.json
docs/: api_reference.md  architecture.md  usage_guide.md
notebooks/: EMAR_Complete_Analytical_Pipeline.ipynb  wdi_eda.ipynb  wdi_eda_professional.ipynb
src/wdi_etl/: __init__.py  __main__.py  config.py  eda.py  extract.py  load.py  logger.py  transform.py
src/wdi_etl/api/: __init__.py  client.py
src/wdi_etl/cli/: __init__.py  commands.py
src/wdi_etl/core/: __init__.py  config.py  load.py  transform.py
src/wdi_etl/eda/: __init__.py  analysis.py
src/wdi_etl/utils/: __init__.py  logging_config.py
tests/: __init__.py  conftest.py  test_transform.py
tests/fixtures/: sample_raw.json
tests/integration/: __init__.py  test_pipeline.py
tests/unit/test_api/: test_client.py
tests/unit/test_cli/: test_commands.py
tests/unit/test_core/: test_config.py  test_extract.py  test_load.py  test_transform.py
tests/unit/test_utils/: test_logging_config.py
wdi_etl/: __init__.py  __main__.py  config.py  eda.py  extract.py  load.py  transform.py  wdi_eda.ipynb
